feat: added endpoint for downloading generated report as excel, report shows exam registrations for requested course exam, as well as averageScore and attendance in percantage
